# hexpilot

./: .gitignore  Makefile.am  TODO  configure.ac  glad-mkenv.sh  glad-mkfiles.sh  mkenv.sh  setup.py
analysis/: pyglfw_demo.py  pyside_demo.py  pyside_hello_triangle.py  pyside_vertex_colors.py
data/: black_model.vert  blur.frag  direct_colour.frag  direct_texture.frag  direct_texture.vert  edge_lines.geom  flat_model.vert  flat_model_g.vert  lit_model.vert  merge_frames.frag  null.geom
doc/doxygen/: Doxyfile
lib/: Makefile.am  buffers.c  buffers.h  data_buffers.c  data_buffers.h  error_codes.h  frame_buffers.c  frame_buffers.h  frames.c  frames.h  geometry.c  geometry.h  glad.c  glad.h  glfw.c  glfw.h  hexpilot.h  keys.c  keys.h  models.c  models.h  shaders.c  shaders.h  status.h  status_codes.h  universe.c  universe.h  vertices.c  vertices.h  worlds.c  worlds.h
lib/data/: uint32.c  uint32.h  vecf4.c  vecf4.h
src/: Makefile.am  buffers.c  buffers.h  error_codes.h  flight.c  flight.h  flight_geometry.c  flight_geometry.h  flight_simple.c  flight_simple.h  geometry.c  geometry.h  glfw.c  glfw.h  hexpilot  init.c  init.h  keys.c  keys.h  main.c  models.c  models.h  programs.c  programs.h  shaders.c  shaders.h  tiles.c  tiles.h  vertices.c  vertices.h  world.c  world.h
tests/: Makefile.am  check_tiles.c
